# IX

./: .gitignore  CMakeLists.txt  README.md
codebase/: project3_report.txt
codebase/ix/: age_idx.ix  backup_inclusive.txt  fork_bomb.c  ix.cc  ix.h  ixtest_01  ixtest_01.cc  ixtest_02  ixtest_03  ixtest_04  ixtest_05  ixtest_06  ixtest_07  ixtest_08  ixtest_08.cc  ixtest_09  ixtest_10  ixtest_10.cc  ixtest_11  ixtest_11.cc  ixtest_12  ixtest_13  ixtest_13.cc  ixtest_14  ixtest_15  ixtest_extra_02
codebase/rbf/: rbfm.h
ix/: age_idx
