cmake_minimum_required(VERSION 3.7)
project(codebase)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_01.cc
        ix/ixtest_02.cc
        ix/ixtest_03.cc
        ix/ixtest_04.cc
        ix/ixtest_05.cc
        ix/ixtest_06.cc
        ix/ixtest_07.cc
        ix/ixtest_08.cc
        ix/ixtest_09.cc
        ix/ixtest_10.cc
        ix/ixtest_11.cc
        ix/ixtest_12.cc
        ix/ixtest_13.cc
        ix/ixtest_14.cc
        ix/ixtest_15.cc
        ix/ixtest_extra_01.cc
        ix/ixtest_extra_02.cc
        rbf/pfm.cc
        rbf/pfm.h
        rbf/rbfm.cc
        rbf/rbfm.h
        rbf/rbftest1.cc
        rbf/rbftest10.cc
        rbf/rbftest11.cc
        rbf/rbftest12.cc
        rbf/rbftest2.cc
        rbf/rbftest3.cc
        rbf/rbftest4.cc
        rbf/rbftest5.cc
        rbf/rbftest6.cc
        rbf/rbftest7.cc
        rbf/rbftest8.cc
        rbf/rbftest8b.cc
        rbf/rbftest9.cc
        rbf/test_util.h
        rm/rbf/pfm.cc
        rm/rbf/pfm.h
        rm/rbf/rbfm.cc
        rm/rbf/rbfm.h
        rm/rbf/rbftest.cc
        rm/rbf/test_util.h
        rm/rm/rm.cc
        rm/rm/rm.h
        rm/rm/rm_test_util.h
        rm/rm/rmtest.cc
        rm/rm/rmtest_create_tables.cc
        rm/rm/rmtest_delete_tables.cc
        rm/rm/rmtest_extra_1.cc
        rm/rm/rmtest_extra_2.cc
        rm/rm/rmtest_p1.cc
        rm/rm/rmtest_p2.cc
        rm/rm/rmtest_p3.cc
        rm/rm/rmtest_p4.cc
        rm/rm/rmtest_p5.cc
        rm/rm/rmtest_p6.cc
        rm/rm/rmtest_p7.cc
        rm/rm/rmtest_pex1.cc
        rm/rm/rmtest_pex2.cc
        rm/rm.cc
        rm/rm.h
        rm/rm_test_util.h
        rm/rmtest_00.cc
        rm/rmtest_01.cc
        rm/rmtest_02.cc
        rm/rmtest_03.cc
        rm/rmtest_04.cc
        rm/rmtest_05.cc
        rm/rmtest_06.cc
        rm/rmtest_07.cc
        rm/rmtest_08.cc
        rm/rmtest_09.cc
        rm/rmtest_10.cc
        rm/rmtest_11.cc
        rm/rmtest_12.cc
        rm/rmtest_13.cc
        rm/rmtest_13b.cc
        rm/rmtest_14.cc
        rm/rmtest_15.cc
        rm/rmtest_create_tables.cc
        rm/rmtest_delete_tables.cc
        rm/rmtest_extra_1.cc
        rm/rmtest_extra_2.cc)

add_executable(codebase ${SOURCE_FILES})